tests/qd/compile_errors/switch_empty.qd
// Test: switch statement with no cases

fn main() {
	1 switch {
	}
	. nl
}
